[yap6] updated STATUS,KUDOS,TODO,INSTALL,README
git-svn-id: http://svn.pugscode.org/pugs@20949 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/yap6/README
+++ b/misc/yap6/README
@@ -1,3 +1,3 @@
 sorry for taking the name yap6 (which formerly belonged to what is now called smop).
 
-please see the comments inline yap6/src/sbin/yap6 for an explanation...
+this is an infantile Perl 6 implementation (just a parser for now).
