* INSTALL: Document the "cabal install Pugs -fOptimize" flag.
  As of Pugs-6.2.13.4, "pugs -e1" time is much shorter than
  before (<0.3s user time), thanks to a new Prelude compilation
  technique using Data.Binary instead of Data.Yaml.Syck.


git-svn-id: http://svn.pugscode.org/pugs@21008 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/INSTALL
+++ b/INSTALL
@@ -258,16 +258,19 @@ these steps:
 file of Cabal will help you get started. Those instructions work for all the
 above packages.)
 
-2. Type the following commands.
+2. Type the following commands:
 
-$ cabal update
-$ cabal install Pugs
+    cabal update
+    cabal install Pugs
 
-...and you're done.
+...and you're done.  To build an optimized Pugs for benchmarking or smoke
+testing, replace the second command with:
+
+    cabal install Pugs -fOptimize
 
 3. To upgrade the current Pugs installation to the latest released version,
    simply type the same two lines of commands above:
 
-$ cabal update
-$ cabal install Pugs
+    cabal update
+    cabal install Pugs
 
