--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -14,7 +14,7 @@ Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
   Last Modified: 10 Jul 2008
   Number: 12
-  Version: 60
+  Version: 61
 
 =head1 Overview
 
@@ -1352,7 +1352,7 @@ how to generalize a particular enumerated value to its role.  So
 
 is short for something like:
 
-    0 but bool::True
+    0 but Bool::True
 
 A property is defined by a role like this:
 
@@ -1707,7 +1707,7 @@ compilation error.  (All colliding values are hidden, not just the new one,
 or the old one.)  Any explicit sub or type definition hides all imported
 enum values of the same name but will produce a warning unless
 C<is redefined> is included.  Note that true() is a built-in function,
-while True is short for C<bool::True>.
+while True is short for C<Bool::True>.
 
 Enum values may be used as a property on the right side
 of a C<but>, and the enum type will be intuited from the value to make
@@ -1764,13 +1764,15 @@ all return false.
 
 Two built-in enums are:
 
-    our bit enum *bool <False True>;
-    our bit enum *taint <Untainted Tainted>;
+    our bit enum Bool <False True>;
+    our bit enum Taint <Untainted Tainted>;
 
-Note that C<bool> and C<taint> are really role names.  You can call
-C<.bool> on any built-in type, but the value returned is of type C<bit>.
-Never compare a value to "C<true>", or even "C<True>".  Just use it
-in a boolean context.
+Note that C<Bool> and C<Taint> are really role names, and the enum
+values are really subset types of the C<bit> integer type.  You can
+call the C<.Bool> coercion or the C<true> function or the C<?>
+prefix operator on any built-in type, but the value returned is of
+type C<bit>.  Never compare a value to "C<true>", or even "C<True>".
+Just use it in a boolean context.
 
 =head1 Open vs Closed Classes
 
