--- a/misc/pixie/README
+++ b/misc/pixie/README
@@ -1,3 +1,3 @@
 # pixie - an elf with a STD.pm frontend
-sh brew # compile 
+sh compile # compile 
 perl pixie <<< 'say "Hello World";' #that's more or less what's working now
